# kabucomtrading

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  README_private.md  backtest_metrics.py  backtest_results.json  backtest_visualizer.py  backtest_yahoo.py  bulk_optimize_symbols.py  constants.py  enhanced_backtest.py  fix_streamlit.py  import_financials_cache.py  import_yahoo_to_db.py  issues.md  main.py  multi_stock_backtest.py  prepare_candle_table.py  pyproject.toml  run_strategy.py  settings.ini  settings.py  stockdata.sql  stockdata.sql.backup  stockdata.sql.backup_20251109_204700  streamlit_app.py  trade_logger.py  walkforward_analysis.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/backtest/: __init__.py  backtest_metrics.py  backtest_visualizer.py  enhanced_backtest.py  trade_logger.py
app/controllers/: ai.py  streamdata.py  webserver.py
app/data/: __init__.py  yahoo.py
app/models/: base.py  candle.py  dfcandle.py  events.py
app/services/: __init__.py  indicator_params.py
app/views/: chart.html  google.html  terminal.html
archive/: streamlit_app copy.py
backtest_details/: 1459_bollinger_bands_20251109_153829.csv  1459_ema_20251109_153829.csv  1459_macd_20251109_153829.csv  1459_rsi_20251109_153829.csv
data/perpbr/: perpbr202508.xlsx  perpbr202509.xlsx  perpbr202510.xlsx
data_cache/: 7203_1d_3650days.csv  7203_financial.json
docs/: BACKTEST_GUIDE.md  HEIDISQL_SETUP.md
kabucom/: kabucom.py
oanda/: oanda.py
results/: bulk_optimize_smoke.csv  strategy_lab_custom_templates.json
scripts/: __init__.py  bulk_optimize_symbols.py  import_financials_cache.py  import_yahoo_to_db.py  multi_stock_backtest.py  prepare_candle_table.py  run_strategy.py  walkforward_analysis.py
templates/: heidisql_candle_template.csv
tests/: conftest.py  test_backtest_metrics.py  test_backtest_visualizer_module.py  test_compat_wrappers_and_utils.py  test_context.py  test_engine.py  test_events_module.py  test_indicators.py  test_optimization_utils.py  test_risk_management_safety.py  test_strategy_lab_templates.py  test_talib_setup.py  test_trade_logger_module.py  test_webserver_terminal_monitor.py  test_yahoo_data.py
tradingalgo/: algo.py
utils/: utils.py
